# imap-pipeline-core

./: .coveragerc  .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  build-docker-matlab.sh  build-docker.sh  build-python-versions.sh  build.sh  calibration_application_config.yaml  calibration_config.yaml  check_for_matlab_bits.py  config-hk-download.yaml  config-hk-process.yaml  config-sci.yaml  config.yaml  defaults.env  dev-env-first-time.sh  imap-db-ingest-config.yaml  imap-db-injest-config.yaml  imap-mag-config.yaml  install.sh  pack.sh  pack_build_deploy.sh  pyproject.toml  pyrightconfig.json  run-docker.sh  start_dev.sh  write_offsets_file_from_layer.py
.devcontainer/: Dockerfile  devcontainer-lock.json  devcontainer.json
.github/ISSUE_TEMPLATE/: release-checklist.md
.github/workflows/: ci-windows.yml  ci.yml  pre-commit_autoupdate.yaml
deploy/: Dockerfile  MATLAB-Dockerfile  README.md  entrypoint.sh  example-entrypoint.sh
docs/: webpoda.md
resource/: imap_mag_l2-norm-offsets_20250421_20250421_v001.cdf  imap_mag_l2_offset_skeleton_v006.cdf  l2_dsrf_skeleton.cdf  l2_dsrf_skeleton_old.cdf  l2_offset_skeleton.cdf
src/: test.py
src/imap_db/: __init__.py  alembic.ini  main.py  model.py
src/imap_mag/: DB.py  __init__.py  appConfig.py  appLogging.py  appUtils.py  imapProcessing.py  main.py  outputManager.py  spice.py
src/mag_toolkit/: CDFLoader.py  __init__.py
src/matlab/: calibration.json  demo.p  emptyCalibrator.m  generateCalFile.m  generate_offsets.p  helloworld.p  imap_mag_l1b_norm-mago_20251017_v002.json
src/prefect_server/: POstgres upload todo.md  __init__.py  checkIALiRT.py  constants.py  datastoreCleanupFlow.py  datastoreIndexerFlow.py  deploy_test.py  durationUtils.py  fileAnalyserFlow.py  fileIndexFlow.py  fileVersionUtils.py  performCalibration.py  pollHK.py  pollHiEsaStep.py  pollIALiRT.py  pollLoPivotPlatform.py  pollScience.py  pollSmallForces.py  pollSpice.py  pollSpinTable.py  pollWebTCADLaTiS.py  postgresUploadFlow.py  prefectUtils.py  publishFlow.py  quicklookIALiRT.py  serverConfig.py  sharepointUploadFlow.py  spiceDownloadFlow.py  uploadFlow.py  uploadSharedDocsFlow.py  webTCADFlowHelpers.py  workflow.py
tests/: conftest.py  testUtils.py  test_CCSDSBinaryPacketFile.py  test_CommandConfig.py  test_DBIndexedDatastoreFileManager.py  test_DatastoreFileManager.py  test_DatetimeProvider.py  test_DownloadLoPivotCsvFilesStage.py  test_DownloadSpinTableFilesStage.py  test_IALiRTApiClient_unit.py  test_SPICEPathHandler.py  test_SaveProcessingDatesStage.py  test_WebTCADLaTiS.py  test_additional_coverage.py  test_appLogging_and_cliUtils.py  test_appUtils.py  test_apply.py  test_apply_unit.py  test_calibration.py  test_calibration_applicator_unit.py  test_calibration_config.py  test_calibration_layer_unit.py  test_calibration_without_matlab.py  test_checkIALiRT.py  test_check_ialirt_files.py  test_cliUtils.py  test_client_classes.py  test_config.py  test_config_classes.py  test_crump_config.yaml  test_data_pipeline_core.py  test_database.py  test_database_unit.py  test_datastoreCleanupFlow.py  test_datastoreIndexerFlow.py  test_datastore_file_finder.py  test_downloadDateManager.py  test_durationUtils.py  test_fetchBinary.py  test_fetchBinary_cli.py  (+64 more)
tests/config/: hk_process.yaml
tests/imap_db/: test_migrate_layer_files.py  test_model.py
tests/integration/: test_DBIndexedDatastoreFileManager.py  test_NOAAApiClient.py  test_WebTCADLaTiS.py  test_apply.py  test_calibration.py  test_checkIALiRT.py  test_database.py  test_datastoreCleanupFlow.py  test_downloadDateManager.py  test_fetchNOAA.py  test_fileAnalysisFlow.py  test_ialirtApiClient.py  test_imap_db_main.py  test_main.py  test_migrate_layer_csv_data_filename_fix.py  test_migrate_layer_files.py  test_migrate_legacy_layer_csv_files.py  test_migrate_major_version.py  test_nan_fill_val_propagation.py  test_performCalibration.py  test_plotIALiRT.py  test_pollHK.py  test_pollIALiRT.py  test_pollLoPivotPlatform.py  test_pollScience.py  test_pollSpice.py  test_pollSpinTable.py  test_postgresUploadFlow.py  test_quicklookIALiRT.py  test_sdcDataAccess.py  test_setQualityAndNan.py  test_spice_metakernel.py
tests/prefect_server/: test_fileIndexFlow.py
tests/test_data/: MAG_HSK_PROCSTAT.pkts  MAG_HSK_PW_20251017_sclk.pkts  MAG_HSK_SCI.pkts  MAG_HSK_SCI_small.pkts  MAG_HSK_STATUS.pkts  MAG_HSK_STATUS_small.pkts  SCID_X285.pkts  ialirt_data_with_anomalies.csv  ialirt_data_without_anomalies.csv  ialirt_hk_data_with_anomalies.csv  ialirt_hk_data_without_anomalies.csv  ialirt_hk_plot_data.csv  ialirt_plot_data.csv  ialirt_science_data_with_anomalies.csv  ialirt_science_plot_data.csv  imap_ialirt_20251014.csv  imap_ialirt_20251017.csv  imap_ialirt_mag_20251014.csv  imap_mag_four-vector-offsets-layer-meta_20251017_v001.json  imap_mag_four-vector-offsets-norm-layer-data_20251017_v001.csv  imap_mag_four-vector-offsets-norm-layer_20251017_v001.json  imap_mag_l1d-calibration_20260324_v005.cdf  imap_mag_misaligned-timestamps-layer-data_20251017_v001.csv  imap_mag_misaligned-timestamps-layer_20251017_v001.json  imap_mag_misaligned-timestamps-norm-layer_20251017_v001.json  imap_sc_l0_x286_20260204_001.pkts  imap_sc_l0_x286_20260204_002.pkts  metadata_file_no_data_filename.json  metadata_file_no_metadata.json  metadata_file_with_values.json  metadata_file_with_values_and_data_file.json
tests/test_truth/: MAG_HSK_PROCSTAT.csv  MAG_HSK_PW.csv  MAG_HSK_SCI.csv  MAG_HSK_SID15.csv  MAG_HSK_STATUS.csv
tests/unit/: test_AnalyseFileStage.py  test_AncillaryPathHandler.py  test_AppLogging.py  test_CCSDSBinaryPacketFile.py  test_CDFLoader.py  test_CalibrationJob.py  test_CalibrationMatrix.py  test_CommandConfig.py  test_DatastoreFileManager.py  test_DatetimeProvider.py  test_DownloadLoPivotCsvFilesStage.py  test_DownloadNOAAStage.py  test_DownloadSmallForcesFilesStage.py  test_DownloadSpinTableFilesStage.py  test_DownloadWebTCADCsvFilesStage.py  test_FileIndexPipeline.py  test_IndexFileStage.py  (+62 more)
utils/: README.md  combine_xtce_files.py  excel_to_xtce.py  l2-offset-skeleton-generator.py
(+339 files in other folders)
