[project]
requires-python = ">=3.11"
name = "imap-mag"
version = "4.9.0"

[tool.poetry]
name = "imap-mag"
description = "Process IMAP data"
authors = ["alastairtree"]
readme = "README.md"
packages = [
    { include = "imap_mag", from = "src" },
    { include = "imap_db", from = "src" },
    { include = "mag_toolkit", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
pyyaml = "^6.0.3"
typing-extensions = "^4.15.0"
pydantic = "^2.11.10"
space-packet-parser = "^6.1.0"
xarray = "^2025.6.1"
numpy = "^2.4.1"
typer = ">=0.16.0,<0.20.0"
sqlalchemy = "^2.0.45"
alembic = "^1.17.2"
sqlalchemy-utils = "^0.42.0"
requests = "^2.32.4"
pandas = "^2.2.2"
imap-data-access = "^0.37.1"
cdflib = "^1.3.6"
psycopg = {extras = ["binary"], version = "^3.2.9"}
prefect = {extras = ["shell"], version = "3.6.11"}
prefect-docker = "0.7.1"
spacepy = "^0.7.0"
pydantic-settings = "^2.8.1"
ccsdspy = "^1.4.2"
crump = "^0.4.0"
prefect-managedfiletransfer = "^0.4.1"
ialirt-data-access = "^0.5.0"
apprise = ">=1.9.5"
prefect-sqlalchemy = "^0.5.3"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
pytest-mock = "^3.14.1"
pytest-env = "^1.1.5"
pytest-asyncio = "^1.2.0"
pre-commit = "^3.8.0"
ruff = "^0.8.1"
docker = "^7.1.0"
testcontainers = "^4.13.2"
wiremock = "^2.7.0"
pytest-xdist = "^3.8.0"
diffimg = "^0.3.0"
openpyxl = "^3.1.5"
imap-processing = "^1.0.16"

[tool.poetry.scripts]
# can execute via poetry, e.g. `poetry run imap-mag hello world`
imap-mag = 'imap_mag.main:app'
imap-db = 'imap_db.main:app'

[tool.pytest.ini_options]
pythonpath = [
  ".", "src"
]
minversion = "8.0"
testpaths = [
    "tests/*.py",
    "tests/**/*.py",
]
env = [
    "PREFECT_LOGGING_EXTRA_LOGGERS=imap_mag,imap_db,mag_toolkit,prefect_server,imap_data_access,ialirt_data_access",
    "PREFECT_LOGGING_LEVEL=INFO"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # Pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "RUF"  # ruff
]
pydocstyle.convention = "google"

[tool.ruff.lint.per-file-ignores]
# Ignore:
#  * Line too long
#  * Optional replaced as X | None
"*" = ["E501", "UP007"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
